--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 parts = dev prod testrunner pydev
-develop = . ../utils/ ../gtfsdb/
-app-egg-name = ott.loader
+develop = . ../utils/
+app-egg-name = ott.slacker
 newest = false
 versions = versions
 include-site-packages = true
@@ -12,13 +12,13 @@ prefer-final = true
 recipe = zc.recipe.egg
 dependent-scripts = true
 interpreter = python
-eggs = ott.loader[dev]
+eggs = ott.slacker[dev]
 
 [prod]
 recipe = zc.recipe.egg
 dependent-scripts = true
 interpreter = python
-eggs = ott.loader
+eggs = ott.slacker
 
 [testrunner]
 recipe = zc.recipe.testrunner
