--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = dev prod testrunner pydev
+parts = dev prod testrunner pydev cmds
 develop = . ../utils/
 app-egg-name = ott.slacker
 newest = false
@@ -28,6 +28,13 @@ script = test
 [pydev]
 recipe = pb.recipes.pydev
 eggs = ${dev:eggs}
+
+[cmds]
+recipe = collective.recipe.cmd
+on_install = true
+cmds =
+  git update-index --assume-unchanged security_keys.py
+  bin/python -m textblob.download_corpora
 
 #
 # IMPORTANT: 
