refactor ... post install cmds within buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -32,9 +32,8 @@ eggs = ${dev:eggs}
 [cmds]
 recipe = collective.recipe.cmd
 on_install = true
-cmds =
-  git update-index --assume-unchanged security_keys.py
-  bin/python -m textblob.download_corpora
+cmds = bin/python -m textblob.download_corpora; git update-index --assume-unchanged security_keys.py
+
 
 #
 # IMPORTANT: 
